redesign subtitle page/ added checkout/ redesign main page/ added animation template pages / restructuring html for better SEO

--- a/components/homeMain.module.css
+++ b/components/homeMain.module.css
@@ -87,6 +87,8 @@
 .ezconvert_card{
 
     background:#a30015;
+    background:#2e77bb;
+
     border:3px solid #ffffff88;
 
     box-shadow: 0 11px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -98,6 +100,8 @@
 
 
     background:#3b8a21;
+    background:#2e77bb;
+
     border:3px solid #ffffff88;
     box-shadow: 0 11px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
@@ -108,6 +112,8 @@
 
     border-radius: 6px;
     background:#cf420a;
+    background:#2e77bb;
+
     border:3px solid #ffffff88;
     box-shadow: 0 11px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
