--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -15,7 +15,7 @@
     z-index:1;
 }
 .profile_wrapper{
-    background-color: #F5F5F5;
+    background-color: #fefefe;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -326,7 +326,7 @@
     top:calc(50% + 8px);
     transform: translateY(-50%);
     color: #19191988;
-    background: #f5f5f5;
+    background: #fefefe;
     transition: 0.3s ease;
 }
 /*
@@ -362,7 +362,7 @@
 .input_wrapper.one input:focus + .placeholder{
     font-size: 12px;
     top:20px;
-    background: #f5f5f5;
+    background: #fefefe;
     color: #35C9F2;
 
 }
