--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -77,7 +77,7 @@
     min-width: 1024px;
     height:59px;
     max-height: 59px;
-    background:#ffffff;
+    background:#fefefe;
     transition: all 0.6s cubic-bezier(.25,.8,.25,1);
 }
 .nav_icon_wrapper{
