--- a/styles/global.css
+++ b/styles/global.css
@@ -8,10 +8,17 @@ body{
     line-height: 1.6;
     font-size: 18px;
     font-weight: 100;
+    scroll-behavior: smooth;
     background:#12263a;
+    background:#0E1F2F;
+    /*filter: grayscale(100%);*/
+    --main-color:#051624;
+    --accent-second:#F24C27;
+    --gutter:60px;
+    --no-color:#19191900;
 }
 
-*{
+*, ::before, ::after{
     box-sizing: border-box;
 }
 
@@ -21,7 +28,7 @@ a{
 }
 
 a:hover{
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 img {
