--- a/components/homeMain2.module.css
+++ b/components/homeMain2.module.css
@@ -9,6 +9,55 @@
     border-bottom: 1px solid #fefefe;
 
 }
+.product_main_wrapper{
+    position: relative;
+    max-width: 1200px;
+    margin: auto;
+    overflow: visible;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+.product_main{
+    flex: 0 0 49%;
+    position: relative;
+    height:998px;
+    margin: auto;
+    overflow: visible;
+    margin-left:6%;
+}
+.product_main_inner{
+    display:grid;
+    grid-row-gap: 26px;
+    grid-template-columns: 1.2fr 2fr;
+}
+.product_main_inner_try_button{
+    position: relative;
+    width:200px;
+    height: 50px;
+    color:#000000;
+    border-radius: 11px;
+    background-color:#fefefe;
+
+}
+.product_main_inner_buy_button{
+    position: relative;
+    width:200px;
+    height: 50px;
+    color:#ffffff;
+    border-radius: 11px;
+    background-color:#2e77bb;
+}
+.button_inner{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
+.product_main_description{
+    margin-top: 26px;
+}
 .product{
     position: relative;
     max-width: 1200px;
