--- a/components/homeMain2.module.css
+++ b/components/homeMain2.module.css
@@ -9,7 +9,7 @@
     border-bottom: 1px solid #fefefe;
 
 }
-.product_main_wrapper{
+/*.product_main_wrapper{
     position: relative;
     max-width: 1200px;
     margin: auto;
@@ -18,19 +18,61 @@
     flex-direction: row;
     justify-content: space-between;
 
+
+
+}*/
+.product_main_wrapper{
+    position: relative;
+    max-width: 1200px;
+    margin: auto;
+    overflow: visible;
+    display: grid;
+    grid-row-gap: 80px;
+    grid-column-gap: 80px;
+    grid-template-areas:
+            "eztitles ezconvert"
+            "titles3d titles3d"
+            "plugins plugins";
+
+
+
+
 }
 .product_main{
     flex: 0 0 49%;
     position: relative;
-    height:998px;
+    /*height:998px;*/
     margin: auto;
     overflow: visible;
-    margin-left:6%;
+
+
+
+}
+.eztitles{
+    grid-area: eztitles;
+
+}
+.ezconvert{
+    grid-area: ezconvert;
+
+}
+.titles3d{
+    grid-area: titles3d;
+
+}
+.plugins{
+    grid-area: plugins;
+
 }
 .product_main_inner{
     display:grid;
-    grid-row-gap: 26px;
-    grid-template-columns: 1.2fr 2fr;
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+    grid-template-columns: 1fr 2fr;
+}
+.product_main_inner_title{
+    margin:0;
+    line-height: 1.18em;
 }
 .product_main_inner_try_button{
     position: relative;
@@ -57,6 +99,8 @@
 }
 .product_main_description{
     margin-top: 26px;
+    margin-bottom: 15px;
+    height: 144px;
 }
 .product{
     position: relative;
@@ -64,6 +108,8 @@
     height:600px;
     margin: auto;
     overflow: visible;
+    grid-area: secondary_product;
+
 }
 .main_center{
     max-width:799px;
@@ -110,6 +156,8 @@
     pointer-events: none;
 }
 .stats{
+    width: 200px;
+    height: 200px;
     position: relative;
 
 }
