subtitle page new designs

--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,7 @@ body{
     --gutter:60px;
     --no-color:#19191900;
     --resolution-color-title:#cccccc;
+    --ratio-height:480px;
 }
 
 *, ::before, ::after{
