--- a/styles/subtitle.module.css
+++ b/styles/subtitle.module.css
@@ -1332,6 +1332,8 @@ text-align: center;
     height:260px;
     border:1px solid #fefefe66;
     border-radius: 50%;
+    cursor: default;
+    transition: 0.2s ease-in-out;
 }
 .ratio_circle_inner{
     position: relative;
@@ -1352,6 +1354,12 @@ text-align: center;
     margin-bottom: 0;
     margin-top: 0;
     color: #fefefebb;
+}
+.ratio_circle:hover{
+    background-color: #fefefe;
+}
+.ratio_circle:hover > div > p{
+    color:#191919;
 }
 
 
@@ -1375,6 +1383,7 @@ text-align: center;
     direction: ltr;
     color: #ffffff99;
     cursor: default;
+    transition: 0.3s ease-in-out;
 }
 .language_left{
     text-align: left;
